--- a/templates/index.html
+++ b/templates/index.html
@@ -219,10 +219,10 @@ Close</div>
 <left>
 <form action="#" method="post"><br />
 
-<label>Years:<input type="text" size="4" id='years' name='years' onKeyUp="calculateAge()"> <br>
-        Months:<input type="text" size="4" id='months' name='months'> <br>
-        Weeks:<input type="text" size="4" id='weeks' name='weeks'><br>
-        Days:<input type="text" size="4" id='days' name='days'> </label>
+<label>Years:<input type="text" size="4" id='years' name='years' onKeyUp="calculateAge()" value='0'> <br>
+        Months:<input type="text" size="4" id='months' name='months' onKeyUp="calculateAge()" value='0'> <br>
+        Weeks:<input type="text" size="4" id='weeks' name='weeks' onKeyUp="calculateAge()" value='0'><br>
+        Days:<input type="text" size="4" id='days' name='days' onKeyUp="calculateAge()" value='0'> </label>
 
 </form>
 </left>
