Fix input labels for metabolites.

--- a/templates/index.html
+++ b/templates/index.html
@@ -236,42 +236,41 @@ Close</div>
 <left>
 <form action="#" method="post"><br />
 
-<label>Select all:<input type='checkbox' id='selAll' onchange='checkAll()'><br>
-AcAc:<input type='checkbox' id=AcAc name=AcAc class='met'>
-Acn:<input type='checkbox' id=Acn name=Acn class='met'>
-Ala:<input type='checkbox' id=Ala name=Ala class='met'>
-Asp:<input type='checkbox' id=Asp name=Asp class='met'>
-Cho:<input type='checkbox' id=Cho name=Cho class='met'>
-Cr:<input type='checkbox' id=Cr name=Cr class='met'>
-CrCH2:<input type='checkbox' id=CrCH2 name=CrCH2 class='met'>
-GABA:<input type='checkbox' id=GABA name=GABA class='met'>
-GPC:<input type='checkbox' id=GPC name=GPC class='met'>
-Glc:<input type='checkbox' id=Glc name=Glc class='met'>
-Gln:<input type='checkbox' id=Gln name=Gln class='met'>
-Glu:<input type='checkbox' id=Glu name=Glu class='met'>
-Glx:<input type='checkbox' id=Glx name=Glx class='met'>
-Gua:<input type='checkbox' id=Gua name=Gua class='met'>
-Ins:<input type='checkbox' id=Ins name=Ins class='met'>
-Lac:<input type='checkbox' id=Lac name=Lac class='met'>
-Lip09:<input type='checkbox' id=Lip09 name=Lip09 class='met'>
-Lip13a:<input type='checkbox' id=Lip13a name=Lip13a class='met'>
-Lip13b:<input type='checkbox' id=Lip13b name=Lip13b class='met'>
-Lip20:<input type='checkbox' id=Lip20 name=Lip20 class='met'>
-MM09:<input type='checkbox' id=MM09 name=MM09 class='met'>
-MM12:<input type='checkbox' id=MM12 name=MM12 class='met'>
-MM14:<input type='checkbox' id=MM14 name=MM14 class='met'>
-MM17:<input type='checkbox' id=MM17 name=MM17 class='met'>
-MM20:<input type='checkbox' id=MM20 name=MM20 class='met'>
-NAA:<input type='checkbox' id=NAA name=NAA class='met'>
-NAAG:<input type='checkbox' id=NAAG name=NAAG class='met'>
-PCh:<input type='checkbox' id=PCh name=PCh class='met'>
-PCr:<input type='checkbox' id=PCr name=PCr class='met'>
-Scyllo:<input type='checkbox' id=Scyllo name=Scyllo class='met'>
-Tau:<input type='checkbox' id=Tau name=Tau class='met'>
-tCho:<input type='checkbox' id=tCho name=tCho class='met'>
-tCr:<input type='checkbox' id=tCr name=tCr class='met'>
-tNAA:<input type='checkbox' id=tNAA name=tNAA class='met'>
-</label>
+<label>Select all:<input type='checkbox' id='selAll' onchange='checkAll()'></label><br>
+<label>AcAc:<input type='checkbox' id=AcAc name=AcAc class='met'></label>
+<label>Acn:<input type='checkbox' id=Acn name=Acn class='met'></label>
+<label>Ala:<input type='checkbox' id=Ala name=Ala class='met'></label>
+<label>Asp:<input type='checkbox' id=Asp name=Asp class='met'></label>
+<label>Cho:<input type='checkbox' id=Cho name=Cho class='met'></label>
+<label>Cr:<input type='checkbox' id=Cr name=Cr class='met'></label>
+<label>CrCH2:<input type='checkbox' id=CrCH2 name=CrCH2 class='met'></label>
+<label>GABA:<input type='checkbox' id=GABA name=GABA class='met'></label>
+<label>GPC:<input type='checkbox' id=GPC name=GPC class='met'></label>
+<label>Glc:<input type='checkbox' id=Glc name=Glc class='met'></label>
+<label>Gln:<input type='checkbox' id=Gln name=Gln class='met'></label>
+<label>Glu:<input type='checkbox' id=Glu name=Glu class='met'></label>
+<label>Glx:<input type='checkbox' id=Glx name=Glx class='met'></label>
+<label>Gua:<input type='checkbox' id=Gua name=Gua class='met'></label>
+<label>Ins:<input type='checkbox' id=Ins name=Ins class='met'></label>
+<label>Lac:<input type='checkbox' id=Lac name=Lac class='met'></label>
+<label>Lip09:<input type='checkbox' id=Lip09 name=Lip09 class='met'></label>
+<label>Lip13a:<input type='checkbox' id=Lip13a name=Lip13a class='met'></label>
+<label>Lip13b:<input type='checkbox' id=Lip13b name=Lip13b class='met'></label>
+<label>Lip20:<input type='checkbox' id=Lip20 name=Lip20 class='met'></label>
+<label>MM09:<input type='checkbox' id=MM09 name=MM09 class='met'></label>
+<label>MM12:<input type='checkbox' id=MM12 name=MM12 class='met'></label>
+<label>MM14:<input type='checkbox' id=MM14 name=MM14 class='met'></label>
+<label>MM17:<input type='checkbox' id=MM17 name=MM17 class='met'></label>
+<label>MM20:<input type='checkbox' id=MM20 name=MM20 class='met'></label>
+<label>NAA:<input type='checkbox' id=NAA name=NAA class='met'></label>
+<label>NAAG:<input type='checkbox' id=NAAG name=NAAG class='met'></label>
+<label>PCh:<input type='checkbox' id=PCh name=PCh class='met'></label>
+<label>PCr:<input type='checkbox' id=PCr name=PCr class='met'></label>
+<label>Scyllo:<input type='checkbox' id=Scyllo name=Scyllo class='met'></label>
+<label>Tau:<input type='checkbox' id=Tau name=Tau class='met'></label>
+<label>tCho:<input type='checkbox' id=tCho name=tCho class='met'></label>
+<label>tCr:<input type='checkbox' id=tCr name=tCr class='met'></label>
+<label>tNAA:<input type='checkbox' id=tNAA name=tNAA class='met'></label>
 
 </form>
 </left>
