Not implemented message.

--- a/templates/index.html
+++ b/templates/index.html
@@ -284,7 +284,7 @@ Close</div>
 <left>
 <form action="#" method="post"><br />
 
-<label>test2
+<label>Not currently implemented.
 </label>
 
 </form>
@@ -299,7 +299,7 @@ Close</div>
 <left>
 <form action="#" method="post"><br />
 
-<label>test3
+<label>Not currently implemented.
 </label>
 
 </form>
