Add glioma example to keywords.

--- a/templates/index.html
+++ b/templates/index.html
@@ -167,7 +167,7 @@ ul.justify { margin-left:-2.75em; }
                         <div class ='optionBox'><input type="text" size="4" name="b" style="border:0px solid"><img id='metOpt' src="../img/new_window.png" style="padding-bottom:3px" /></div></span>
                         <span title="Values of the query.">Values:
                         <input type="text" size="5" name="c"></span>
-                        <span title="Keywords of the query.">Keywords:
+                        <span title="Keywords of the query. e.g. '%glioma'">Keywords:
                         <div class ='optionBox'><input type="text" size="4" name="keyword" style="border:0px solid"><img id='keyOpt' src="../img/new_window.png" style="padding-bottom:3px" /></div></span>
                         
                         <span title="Location of the query.">Location:
